# betonotes

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
book/: getting-started.md  intro.md  myst.yml  using-python-modules.md
src/betonotes/: __init__.py  utils.py
