[project]
name = "betonotes"
version = "0.1.0"
description = "A Jupyter Book project with Python utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book>=2.0.0a0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/betonotes"]
